初步实现游戏主要逻辑